# Engine

./: .clang-format  .editorconfig  .gitignore  .temp-mermiad-arch.mermaid  CMakeLists.txt  README.md  fileTree.txt  launch  phase-III-steps.md  phase-iii-steps.txt  run  tags.md  test  todo.md  vcpkg.json
assets/models/: moai.mtl  smoothSponza.mtl  sponza.mtl
debug_shaders/: last_COMPUTE.glsl  last_FRAGMENT.glsl  last_VERTEX.glsl
shaders/compute/: path_tracer.comp
shaders/include/: common.glsl  intersections.glsl  sharedStructures.glsl  sharedUniforms.glsl
shaders/include/models/: blinn_phong.glsl
shaders/include/pathTracing/: sceneBuffers.glsl  structures.glsl
shaders/raster/: viewport.frag  viewport.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Defaults.h  Input.cpp  Input.h  Window.cpp  Window.h
src/renderer/: BufferManager.cpp  BufferManager.h  IRenderer.h  PathTracer.cpp  PathTracer.h  Rasterizer.cpp  Rasterizer.h  Shader.cpp  Shader.h  shader.cpp  shader.h
src/resources/: AssetManager.cpp  AssetManager.h  AssetTypes.h  ModelLoader.cpp  ModelLoader.h
src/scene/: Camera.cpp  Camera.h  ECS.h  Entity.h  Scene.cpp  Scene.h  camera.cpp  camera.h
src/scene/components/: MeshComponent.h  TransformComponent.h
src/services/: Input.cpp  Input.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
